--- a/CoordAnimation/MainWindow.xaml
+++ b/CoordAnimation/MainWindow.xaml
@@ -5,13 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CoordAnimation"
         mc:Ignorable="d"
-        Title="CoordAnimation" WindowState="Maximized">
-    <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <StackPanel Name="scenes">
-            <local:Scene Height="750"/>
-            <!--<local:Scene Height="430"/>-->
-            <local:IntervalEditor IntervalType="Int" FontSize="16" Height="50"/>
-            <local:RectPointEditor Foreground="{StaticResource VSBorderBrush}" FontSize="16" Height="100" Width="100" PointsRadius="7"/>
-        </StackPanel>
-    </ScrollViewer>
+        Title="CoordAnimation" WindowState="Maximized" Width="1920" Height="1080">
+    <local:Scene/>
 </Window>
