--- a/CoordAnimation/App.xaml
+++ b/CoordAnimation/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="CoordAnimation.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CoordAnimation"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:CoordAnimation" Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
