--- a/CoordAnimation/CharacterAnimation/Scene.xaml
+++ b/CoordAnimation/CharacterAnimation/Scene.xaml
@@ -2,12 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:dock="http://schemas.xceed.com/wpf/xaml/avalondock"
              xmlns:local="clr-namespace:CoordAnimation"
              xmlns:benlib="clr-namespace:BenLib.WPF;assembly=BenLib.WPF"
              xmlns:c="clr-namespace:Coord;assembly=CoordLib"
              mc:Ignorable="d" 
-             d:DesignHeight="430" d:DesignWidth="1920" Loaded="UserControl_Loaded" Background="{StaticResource VSBackground}">
+             d:DesignHeight="430" d:DesignWidth="1920" Loaded="UserControl_Loaded" Background="{StaticResource VSBackground}" DataContext="{Binding RelativeSource={RelativeSource Self}}">
+    <UserControl.Resources>
+        <ContextMenu x:Key="PlaneCM">
+            <MenuItem Header="Ajouter un effet sur la sélection" Click="MenuItem_Click" ItemsSource="{Binding CharacterEffectNames}" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
+        </ContextMenu>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
@@ -19,47 +25,49 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <Button Name="editButton" Width="30" Height="30" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left"/>
-        <Button Name="propeditButton" Margin="30,0,0,0" Width="30" Height="30" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Click="PropEditButton_Click"/>
+        <!--<Button Name="editButton" Width="30" Height="30" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left"/>
+        <Button Name="propeditButton" Margin="0,0,900,0" Width="30" Height="30" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right"/>-->
         <local:ConfigEdit x:Name="configuration" Grid.Column="0" Grid.Row="1"/>
-        
+
         <GridSplitter Grid.Column="0" Width="1" HorizontalAlignment="Right" Background="{StaticResource BorderBrush}" Panel.ZIndex="1" Grid.Row="1"/>
 
-        <ListView Grid.Column="1" benlib:ListBoxSelector.Enabled="True" Background="{StaticResource VSBackground}" BorderBrush="{StaticResource BorderBrush}" ItemsSource="{Binding EffectElements}" Grid.Row="1">
-            <ListView.Resources>
-                <Style x:Key="{x:Type GridViewColumnHeader}" TargetType="{x:Type GridViewColumnHeader}" BasedOn="{StaticResource {x:Type GridViewColumnHeader}}">
-                    <Setter Property="Foreground" Value="White"/>
-                    <Setter Property="Background" Value="{StaticResource VSBackground}"/>
-                    <Setter Property="BorderBrush" Value="{StaticResource VSBorderBrush}"/>
-                    <Setter Property="benlib:GridViewColumnHeaderProperties.MouseOverBrush" Value="#3E3E40"/>
-                    <Setter Property="benlib:GridViewColumnHeaderProperties.IsPressedBrush" Value="#007ACC"/>
-                </Style>
-                <Style x:Key="{x:Type ListViewItem}" TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource {x:Type ListViewItem}}">
-                    <Setter Property="Background" Value="{StaticResource VSBackground}"/>
-                    <Setter Property="Foreground" Value="White"/>
-                    <Setter Property="benlib:ListViewItemProperties.IsSelectedBackgroundBrush" Value="#007acc"/>
-                    <Setter Property="benlib:ListViewItemProperties.IsSelectedForegroundBrush" Value="White"/>
-                </Style>
-            </ListView.Resources>
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Type" Width="100" DisplayMemberBinding="{Binding Type}"/>
-                    <GridViewColumn Header="Propriétaire" Width="150" DisplayMemberBinding="{Binding Effected}"/>
-                    <GridViewColumn Header="Intervalle" Width="100" DisplayMemberBinding="{Binding CharacterEffect.Interval}"/>
-                    <GridViewColumn Header="Durée" Width="100" DisplayMemberBinding="{Binding AnimationData.Range}"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
-        
-        <GridSplitter Grid.Column="1" Width="1" HorizontalAlignment="Right" Background="{StaticResource BorderBrush}" Panel.ZIndex="1" Grid.Row="1"/>
-        
-        <TreeView x:Name="VisualObjectsTreeView" Grid.Column="2" ItemsSource="{Binding Elements.Nodes}" SelectedItemChanged="VisualObjectsTreeView_SelectedItemChanged" Grid.Row="1">
-            <TreeView.Resources>
+        <Grid Grid.Column="1" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="3*"/>
+            </Grid.RowDefinitions>
+            <ListView Name="EffectsList" Grid.Row="0" benlib:ListBoxSelector.Enabled="True" Background="{StaticResource VSBackground}" BorderBrush="{StaticResource BorderBrush}" ItemsSource="{Binding EffectElements}" SelectionChanged="ListView_SelectionChanged">
+                <ListView.Resources>
+                    <Style x:Key="{x:Type GridViewColumnHeader}" TargetType="{x:Type GridViewColumnHeader}" BasedOn="{StaticResource {x:Type GridViewColumnHeader}}">
+                        <Setter Property="Foreground" Value="White"/>
+                        <Setter Property="Background" Value="{StaticResource VSBackground}"/>
+                        <Setter Property="BorderBrush" Value="{StaticResource VSBorderBrush}"/>
+                        <Setter Property="benlib:GridViewColumnHeaderProperties.MouseOverBrush" Value="#3E3E40"/>
+                        <Setter Property="benlib:GridViewColumnHeaderProperties.IsPressedBrush" Value="#007ACC"/>
+                    </Style>
+                    <Style x:Key="{x:Type ListViewItem}" TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource {x:Type ListViewItem}}">
+                        <Setter Property="Background" Value="{StaticResource VSBackground}"/>
+                        <Setter Property="Foreground" Value="White"/>
+                        <Setter Property="benlib:ListViewItemProperties.IsSelectedBackgroundBrush" Value="#007acc"/>
+                        <Setter Property="benlib:ListViewItemProperties.IsSelectedForegroundBrush" Value="White"/>
+                    </Style>
+                </ListView.Resources>
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Type" Width="100" DisplayMemberBinding="{Binding Type}"/>
+                        <GridViewColumn Header="Propriétaire" Width="150" DisplayMemberBinding="{Binding Effected}"/>
+                        <GridViewColumn Header="Intervalle" Width="100" DisplayMemberBinding="{Binding CharacterEffect.Interval}"/>
+                        <GridViewColumn Header="Durée" Width="100" DisplayMemberBinding="{Binding AnimationData.Range}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+            <local:PropertiesEditor x:Name="EffectsEditor" Grid.Row="1"/>
+        </Grid>
 
-                <Style x:Key="{x:Type benlib:SwitchableTextBox}" TargetType="{x:Type benlib:SwitchableTextBox}" BasedOn="{StaticResource {x:Type benlib:SwitchableTextBox}}">
-                    <Setter Property="SBackground" Value="#252526"/>
-                    <Setter Property="SForeground" Value="White"/>
-                </Style>
+        <GridSplitter Grid.Column="1" Width="1" HorizontalAlignment="Right" Background="{StaticResource BorderBrush}" Panel.ZIndex="1" Grid.Row="1"/>
+
+        <TreeView x:Name="VisualObjectsTreeView" Grid.Column="2" ItemsSource="{Binding Elements.Nodes}" TreeViewItem.Selected="VisualObjectsTreeView_Selected" Grid.Row="1">
+            <TreeView.Resources>
 
                 <Style x:Key="{x:Type TreeViewItem}" TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource {x:Type TreeViewItem}}">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
