--- a/CoordAnimation/EffectEdit/PropertyEditors/RangeEditor.xaml
+++ b/CoordAnimation/EffectEdit/PropertyEditors/RangeEditor.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CoordAnimation"
              xmlns:benlib="clr-namespace:BenLib.WPF;assembly=BenLib.WPF"
-             mc:Ignorable="d">
+             mc:Ignorable="d" DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid>
         <benlib:SwitchableTextBox Name="overSB" Activated="OverSB_Activated" Visibility="Collapsed"/>
         <DockPanel Name="ends" LastChildFill="False">
