--- a/CoordAnimation/EffectEdit/PropertyEditors/VisualObjectSelector.xaml
+++ b/CoordAnimation/EffectEdit/PropertyEditors/VisualObjectSelector.xaml
@@ -5,17 +5,30 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:coord="clr-namespace:Coord;assembly=CoordLib"
              xmlns:local="clr-namespace:CoordAnimation"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <ItemsControl ItemsSource="{Binding VisualObjects}">
-        <ItemsControl.ItemTemplate>
-            <DataTemplate DataType="{x:Type coord:VisualObject}">
-                <DockPanel Height="25">
-                    <local:VisualObjectControl ObjectName="{Binding (local:VisualObjectElement.Name), Mode=TwoWay}" ObjectType="{Binding Type, Mode=OneTime}"/>
-                    <TextBlock Text=" | " VerticalAlignment="Center"/>
-                    <local:IntervalEditor IntervalType="Int" IntInterval="{Binding Selection, Mode=TwoWay}"/>
-                </DockPanel>
-            </DataTemplate>
-        </ItemsControl.ItemTemplate>
-    </ItemsControl>
+             mc:Ignorable="d" DataContext="{Binding RelativeSource={RelativeSource Self}}">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="35"/>
+        </Grid.ColumnDefinitions>
+        <ItemsControl ItemsSource="{Binding VisualObjects}">
+            <ItemsControl.Resources>
+                <DataTemplate DataType="{x:Type coord:VisualObject}">
+                    <DockPanel Height="25">
+                        <local:VisualObjectControl ObjectName="{Binding (local:VisualObjectElement.Name), Mode=TwoWay}" ObjectType="{Binding Type, Mode=OneTime}"/>
+                        <TextBlock Text=" | " VerticalAlignment="Center"/>
+                        <local:IntervalEditor IntervalType="Int" IntInterval="{Binding Selection, Mode=TwoWay}"/>
+                    </DockPanel>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type local:VisualObjectPart}">
+                    <DockPanel Height="25">
+                        <local:VisualObjectControl ObjectName="{Binding VisualObject.(local:VisualObjectElement.Name), Mode=TwoWay}" ObjectType="{Binding VisualObject.Type, Mode=OneTime}"/>
+                        <TextBlock Text=" | " VerticalAlignment="Center"/>
+                        <local:IntervalEditor IntervalType="Int" IntInterval="{Binding Interval, Mode=TwoWay}"/>
+                    </DockPanel>
+                </DataTemplate>
+            </ItemsControl.Resources>
+        </ItemsControl>
+        <ToggleButton Grid.Column="1" Height="25" VerticalAlignment="Top" Margin="5" IsChecked="{Binding IsSelecting}"/>
+    </Grid>
 </UserControl>
