--- a/CoordAnimation/PropertyEditors/PropertiesEditor.xaml
+++ b/CoordAnimation/PropertyEditors/PropertiesEditor.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CoordAnimation"
              mc:Ignorable="d" DataContext="{Binding RelativeSource={RelativeSource Self}}">
-    <DataGrid Name="Editors" AutoGenerateColumns="False" CanUserSortColumns="False" CanUserReorderColumns="False" HeadersVisibility="None" GridLinesVisibility="None" ItemsSource="{Binding Properties}">
+    <DataGrid Name="Editors" AutoGenerateColumns="False" CanUserSortColumns="False" CanUserReorderColumns="False" HeadersVisibility="None" GridLinesVisibility="All" ItemsSource="{Binding Properties}">
         <DataGrid.Columns>
             <DataGridTextColumn Binding="{Binding Description, Mode=OneTime}" Foreground="White" IsReadOnly="True" Width="*"/>
             <DataGridTemplateColumn Width="2*">
