--- a/CoordAnimation/Global.xaml
+++ b/CoordAnimation/Global.xaml
@@ -65,6 +65,19 @@
 
     <SolidColorBrush x:Key="StatusBarIconBrush" po:Freeze="True">#FF606060</SolidColorBrush>
 
+    <Color x:Key="VSHilightColor">#FF007ACC</Color>
+    <Color x:Key="VSSelectColor">#FF3399FF</Color>
+    <Color x:Key="VSMouseOverColor">#FF3E3E40</Color>
+    <Color x:Key="VSBackgroundColor">#FF252526</Color>
+    <Color x:Key="VSBorderBrushColor">#FF3F3F46</Color>
+    <Color x:Key="VSDarkBrushColor">#FF1B1B1C</Color>
+    <Color x:Key="VSBoxBrushColor">#FF333337</Color>
+    <Color x:Key="VSRedColor">#FFF38B76</Color>
+    <Color x:Key="VSGreenColor">#FF8DD28A</Color>
+    <Color x:Key="VSBlueColor">#FF7AC1ff</Color>
+    <Color x:Key="VSYellowColor">#FFD8AC6A</Color>
+    <Color x:Key="VSWhiteColor">#FFC4C4C4</Color>
+
     <SolidColorBrush x:Key="VSHilight" po:Freeze="True">#FF007ACC</SolidColorBrush>
     <SolidColorBrush x:Key="VSSelect" po:Freeze="True">#FF3399FF</SolidColorBrush>
     <SolidColorBrush x:Key="VSMouseOver" po:Freeze="True">#FF3E3E40</SolidColorBrush>
